syntax = "proto3";

option java_package = "PaymentService.grpc";


service PaymentService {
  rpc CreatePayment (PaymentRequest) returns (PaymentResponse);
  rpc GetPaymentById (PaymentRequestById) returns (PaymentResponse);
  rpc UpdatePaymentStatus (PaymentStatusUpdateRequest) returns (PaymentResponse);
  rpc ListPayments (Empty) returns (PaymentListResponse);
}

message PaymentRequest {
  //string userId = 1;
  //string carId = 2;
  //double amount = 3;
  int64 creditcard_id = 1;
  string creditcardnr = 2;
  string cc_name = 3;
  string cc_lastname = 4;
  int64 customerid = 5;
}

message PaymentRequestById {
  int64 id = 1;
}

message PaymentStatusUpdateRequest {
  int64 id = 1;
  string status = 2;
}

message PaymentResponse {
  //  int64 id = 1;
  //  string userId = 2;
  //  string carId = 3;
  //  double amount = 4;
  //  string paymentDate = 5;
  //  string paymentStatus = 6;
  int64 id = 1;
  int64 creditcard_id = 2;
  string creditcardnr = 3;
  string cc_name = 4;
  string cc_lastname = 5;
  int64 customerid = 6;
  string paymentStatus = 7;
}

message PaymentListResponse {
  repeated PaymentResponse payments = 1;
}

message Empty {}